New in 0.00.85
>When dragging an item to the bar chart, it will move to a random position on the plate (or exercise log)
>Converted control panel background to green
>Made control panel fonts bold
>The play/pause/step buttons are be disabled when you reach the 2 year mark, re-enabled on chart area clear or sim reset

New in 0.00.84
Fixed: String not found on startup: serving-cream-filled-cookies
Converted to use new PhetApplicationConfig constructor
If a person drags food to the bar chart for food  it settles onto the plate and if they drag exercise onto the cal burned bar chart it settles into the book.
Fixed: Exception when dragging food items on/off plate
Fixed: Initial help item does not point to start button
Fixed: Made the wiggle-me go away on either play or next month.
Fixed: The vertical zoom buttons for bar charts are not equal in size.
Time charts go to 2 years instead of 1.
Stop time at the end of the chart (2 year maximum duration of simulation).

New in 0.00.83
Trial version for usage tracking.

New in 0.00.82
Fixed: clicking on "metric" twice disables all radio buttons
Fixed: Use the "losing focus" method instead of incremental updates + 5 second sync to accept data from text boxes in control panel

New in 0.00.81
Adjustments for stomach sizes, including gender dependence

New in 0.00.80
Fixed: Out-of-range value entered in the slider text box doesn't properly revert to accepted value
    Value reverts after 3 seconds

New in 0.00.79
Fixed: Heart should be more unhappy when heart strength is low (right now it still looks a little happy)
Removed "?" box next to happy heart.
Fixed: Muscles should be smaller for thin person. Almost negligible when BMI gets near 18.
    Changed muscleWidthBeyondArm from leanMuscleFraction to max( leanMuscleFraction * leanMuscleFraction - 0.2, 0 )
Made textboxes update incrementally as values are entered.

New in 0.00.78
(changes by Noah P.)
added Activity Level to muscle building formula