@@ -2,8 +2,6 @@
 ###	Todo Sam		####
 ############################
 
-- Horizontal zoom should allow you to zoom in from 2 years, and out to a maximum of 2 years.
-
 - The new chart zoom buttons look better, but it would be more consistent
 if they looked like the vertical zoom buttons on the charts. This is low priority, especially if it is very time consuming.
 
